[package]
name = "repod"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
git2 = "0.20.0"
csv = "1.3.0"
tempfile = "3.10.1"
walkdir = "2.4.0"
anyhow = "1.0.80"
infer = "0.16.0"
encoding_rs = "0.8.33"
encoding_rs_io = "0.1.7"
tiktoken-rs = "0.6.0"
chrono = "0.4.34"
rayon = "1.8.1"
memmap2 = "0.9.0"
parking_lot = "0.12.1"
rpassword = "7.3.1"
indicatif = { version = "0.17.8", features = ["rayon"] }
dirs = "6.0.0"
copypasta = "0.10.0"
glob = "0.3.1"
ignore = "0.4.23"
ureq = { version = "2.9.7", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
